# SlurmTop

./: .gitignore  Cargo.toml  LICENSE  README.md  install.sh  pyproject.toml
config/: interactive_job.toml
container/: SlurmTop.def
python/: pyproject.toml
python/slurmtop/: __init__.py  __main__.py
scripts/: build_slurmtop.sbatch
slurmtop/: __init__.py  app.py  config.py  job_manager.py  models.py  styles.tcss  utils.py
slurmtop/screens/: __init__.py  help_screen.py
slurmtop/widgets/: __init__.py  cpu_pane.py  gpu_pane.py  job_list.py
src/: lib.rs  main.rs  slurm.rs
src/slurmtop/: __init__.py  __main__.py  app.py  config.py  daemon.py  models.py  slurm.py  slurmtop.tcss
src/slurmtop/templ/: config.toml
src/slurmtop/widgets/: __init__.py  detail_view.py  job_table.py  metadata_view.py
