[project]
name = "slurmtop"
version = "0.1.0"
description = "A TUI for monitoring Slurm HPC jobs"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
keywords = ["slurm", "hpc", "tui", "monitoring", "jobs"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Science/Research",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Topic :: System :: Monitoring",
    "Topic :: System :: Clustering",
]
dependencies = [
    "textual>=0.86",
]

[project.scripts]
slurmtop = "slurmtop.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/slurmtop"]
